@@ -4,6 +4,7 @@ Version 0.2.2
 
 - added --touch option to bakefile
 - fixed isdefined() to work with conditional variables (Francesco Montorsi)
+- added --dry-run option to bakefile_gen too
 
 
 Version 0.2.1
